# MahjongBot

./: .gitignore  LICENSE  README.md  __main__.py  dataset.py  feature.py  model.py  preprocess.py  pyproject.toml  supervised.py  国标麻将实验报告_张书铭_2300013144.docx
src/mahjongbot/: __init__.py  __main__.py  data_augment.py  dataset.py  feature.py  model.py  paths.py  preprocess.py  supervised.py
