[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mahjongbot-sl"
version = "0.1.0"
description = "A supervised-learning Mahjong bot for Chinese Official Mahjong."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
  { name = "Zhang Shuming" }
]
dependencies = [
  "numpy>=1.23",
  "torch>=2.0"
]

[project.optional-dependencies]
rules = [
  "MahjongGB @ git+https://github.com/ailab-pku/PyMahjongGB.git"
]

[project.scripts]
mahjongbot = "mahjongbot.__main__:main"
mahjongbot-train = "mahjongbot.supervised:main"
mahjongbot-preprocess = "mahjongbot.preprocess:main"
mahjongbot-augment = "mahjongbot.data_augment:main"

[tool.setuptools.packages.find]
where = ["src"]
